plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.jirabot'
version = '0.0.2-SNAPSHOT'
description = 'Jira Slack Bot Server'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	// STUDY: macOS에서 Netty DNS resolver 네이티브 라이브러리. 없으면 시스템 DNS fallback은 되지만 경고 로그 반복.
	runtimeOnly 'io.netty:netty-resolver-dns-native-macos::osx-aarch_64'
	// STUDY: spring-retry / spring-aspects 는 Spring Boot BOM이 버전을 관리한다.
	//        Boot 버전 업그레이드 시 자동으로 호환 버전으로 따라간다. 명시 버전을 박지 않는 것은 의도된 정책.
	implementation 'org.springframework.retry:spring-retry'
	implementation 'org.springframework:spring-aspects'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testRuntimeOnly 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()
}
